tests/sksl/errors/ReservedNameSampler2DRectShadow.glsl
### Compilation failed:

error: 1: 'sampler2DRectShadow' is a reserved word
int sampler2DRectShadow;
    ^^^^^^^^^^^^^^^^^^^
1 error
